--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/charts": "^2.6.6",
     "@tailwindcss/vite": "^4.1.16",
     "antd": "^5.27.6",
     "react": "^19.1.1",
